Aggiunte nuove pagine, sistemata home con divieto di accesso, nuove immagini

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,14 @@ theme:
       primary: custom
       accent: custom
   language: it
+extra:
+  alternate:
+    - name: Italiano
+      link: /it/
+      lang: it
+    - name: English
+      link: /en/
+      lang: en
 extra_css:
   - stylesheets/shape.css
 
