--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Documentazione BPM
-site_url: https://BPM.docs/it/
+site_url: https://centrosoftware-dev.github.io/bpm-docs/
 theme:
   name: material
   logo: assets/favicon-96x96.png
@@ -11,10 +11,10 @@ theme:
 extra:
   alternate:
     - name: Italiano
-      link: /it/
+      link: /
       lang: it
     - name: English
-      link: /en/
+      link: /bpm-docs/en/
       lang: en
 extra_css:
   - stylesheets/shape.css
