--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,8 @@ theme:
   name: material
   logo: assets/favicon-96x96.png
   favicon: assets/fav.ico
+  icon:
+    annotation: material/arrow-right-circle 
   palette:
     primary: custom
     accent: custom
@@ -20,6 +22,8 @@ extra_css:
   - stylesheets/shape.css
 
 markdown_extensions:
+  - attr_list
+  - md_in_html
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
