--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,11 @@ extra_css:
   - stylesheets/shape.css
 
 markdown_extensions:
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
   - attr_list
   - md_in_html
   - pymdownx.emoji:
